unpackaged/main/default/objects/Component_help_text_setting__mdt/Component_help_text_setting__mdt.object-meta.xml
<CustomObject>
    <label>Component help text setting</label>
    <pluralLabel>Component helptext settings</pluralLabel>
</CustomObject>