unpackaged/main/default/objects/Component_help_text_setting__mdt/fields/Bigger_Body_Test__c.field-meta.xml
<CustomField>
    <fullName>Bigger_Body_Test__c</fullName>
    <label>Bigger Body Test</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>