unpackaged/main/default/objects/Component_help_text_setting__mdt/fields/Heading__c.field-meta.xml
<CustomField>
    <fullName>Heading__c</fullName>
    <label>Heading</label>
    <length>50</length>
    <type>Text</type>
</CustomField>