unpackaged/main/default/objects/Component_help_text_setting__mdt/fields/Inner_Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Inner_Help_Text__c</fullName>
    <label>Inner Help Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>