unpackaged/main/default/objects/Component_help_text_setting__mdt/listViews/ALL_1.listView-meta.xml
<ListView>
    <fullName>ALL_1</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Heading__c</columns>
    <columns>Bigger_Body_Test__c</columns>
    <columns>Help_Text__c</columns>
    <columns>Inner_Help_Text__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL</label>
    <language>en_US</language>
</ListView>